--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <version>1</version>
     </dependency>
     <dependency>
+      <groupId>hermes</groupId>
+      <artifactId>com.incorta.hermes</artifactId>
+      <version>1</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-hive_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
